--- a/index.html
+++ b/index.html
@@ -1,198 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delta AIQ – Company IQ Check</title>
+export default async function handler(req, res) {
+  const { query } = req.query;
 
-    <style>
-      body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          sans-serif;
-        margin: 0;
-        padding: 40px 16px;
-        background: #020617;
-        color: #f9fafb;
-        display: flex;
-        justify-content: center;
-      }
+  // If no query, just return empty list
+  if (!query || query.trim() === "") {
+    return res.status(200).json({ companies: [] });
+  }
 
-      .container {
-        width: 100%;
-        max-width: 640px;
-      }
+  // Check env var
+  if (!process.env.OPENAI_API_KEY) {
+    return res.status(500).json({
+      companies: [],
+      error: "OPENAI_API_KEY missing in Vercel",
+    });
+  }
 
-      h1 {
-        font-size: 28px;
-        margin-bottom: 8px;
-      }
+  try {
+    const response = await fetch("https://api.openai.com/v1/responses", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: `Bearer ${process.env.OPENAI_API_KEY}`,
+      },
+      body: JSON.stringify({
+        model: "gpt-4o-mini",
+        input: `List 10 companies similar to ${query}. 
+                Return only the company names, one per line, no bullets or numbers.`,
+      }),
+    });
 
-      p.subtitle {
-        margin-top: 0;
-        margin-bottom: 24px;
-        color: #9ca3af;
-        font-size: 14px;
-      }
+    const data = await response.json();
 
-      label {
-        display: block;
-        margin-bottom: 6px;
-        font-size: 14px;
-        color: #e5e7eb;
-      }
+    // For debugging, you can uncomment this:
+    // console.log("RAW OPENAI RESPONSE:", data);
 
-      .input-wrapper {
-        position: relative;
-        width: 100%;
-        max-width: 420px;
-      }
+    const text = data.output_text || "";
 
-      input[type="text"] {
-        width: 100%;
-        padding: 10px 12px;
-        border-radius: 8px;
-        border: 1px solid #4b5563;
-        background: #020617;
-        color: #f9fafb;
-        font-size: 14px;
-        outline: none;
-      }
+    const companies = text
+      .split("\n")
+      .map((line) => line.trim().replace(/^\d+\.\s*/, ""))
+      .filter((line) => line.length > 0);
 
-      input[type="text"]:focus {
-        border-color: #38bdf8;
-      }
-
-      .dropdown {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 40px;
-        background: #020617;
-        border-radius: 8px;
-        border: 1px solid #4b5563;
-        margin-top: 4px;
-        max-height: 220px;
-        overflow-y: auto;
-        z-index: 50;
-        display: none;
-      }
-
-      .item {
-        padding: 8px 10px;
-        cursor: pointer;
-        font-size: 14px;
-      }
-
-      .item:hover {
-        background: #111827;
-      }
-
-      .helper {
-        font-size: 12px;
-        color: #64748b;
-        margin-top: 4px;
-      }
-
-      .error {
-        font-size: 12px;
-        color: #f97373;
-        margin-top: 8px;
-        display: none;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="container">
-      <h1>Delta AIQ</h1>
-      <p class="subtitle">
-        Start typing a company name and let AI suggest similar companies.
-      </p>
-
-      <label for="companyInput">Company name</label>
-      <div class="input-wrapper">
-        <input
-          id="companyInput"
-          type="text"
-          placeholder="For example: Lufthansa, Nike, Infosys"
-          autocomplete="off"
-        />
-        <div id="dropdown" class="dropdown"></div>
-      </div>
-
-      <div class="helper">Suggestions are powered by OpenAI.</div>
-      <div id="errorBox" class="error"></div>
-    </div>
-
-    <script>
-      async function fetchCompanySuggestions(query) {
-        const res = await fetch(
-          `/api/companySearch?query=${encodeURIComponent(query)}`
-        );
-        const data = await res.json();
-        return data.companies || [];
-      }
-
-      const input = document.getElementById("companyInput");
-      const dropdown = document.getElementById("dropdown");
-      const errorBox = document.getElementById("errorBox");
-
-      let debounceTimer = null;
-
-      input.addEventListener("input", () => {
-        const query = input.value.trim();
-        errorBox.style.display = "none";
-        errorBox.textContent = "";
-
-        if (debounceTimer) clearTimeout(debounceTimer);
-
-        if (!query) {
-          dropdown.style.display = "none";
-          dropdown.innerHTML = "";
-          return;
-        }
-
-        debounceTimer = setTimeout(() => {
-          updateSuggestions(query);
-        }, 400);
-      });
-
-      async function updateSuggestions(query) {
-        try {
-          const companies = await fetchCompanySuggestions(query);
-          dropdown.innerHTML = "";
-
-          if (!companies.length) {
-            dropdown.style.display = "none";
-            return;
-          }
-
-          companies.forEach((name) => {
-            const item = document.createElement("div");
-            item.className = "item";
-            item.textContent = name;
-            item.addEventListener("click", () => {
-              input.value = name;
-              dropdown.style.display = "none";
-            });
-            dropdown.appendChild(item);
-          });
-
-          dropdown.style.display = "block";
-        } catch (e) {
-          console.error(e);
-          errorBox.textContent =
-            "There was a problem getting suggestions. Please try again.";
-          errorBox.style.display = "block";
-        }
-      }
-
-      // Hide dropdown when clicking outside
-      document.addEventListener("click", (e) => {
-        if (!e.target.closest(".input-wrapper")) {
-          dropdown.style.display = "none";
-        }
-      });
-    </script>
-  </body>
-</html>
+    return res.status(200).json({ companies });
+  } catch (err) {
+    console.error("API error:", err);
+    return res.status(500).json({
+      companies: [],
+      error: err.message,
+    });
+  }
+}
