--- a/index.html
+++ b/index.html
@@ -3,192 +3,110 @@
 <head>
   <meta charset="UTF-8" />
   <title>DeltaAIQ – Company Search</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 40px;
-      background: #f5f5f5;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 0 16px;
+      line-height: 1.5;
     }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      background: #ffffff;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
-    }
-
     h1 {
-      margin-top: 0;
-      font-size: 22px;
+      font-size: 24px;
       margin-bottom: 8px;
     }
-
-    p {
-      margin-top: 0;
-      color: #555;
-      font-size: 14px;
-    }
-
     label {
-      display: block;
-      margin-bottom: 6px;
       font-weight: 600;
-      font-size: 14px;
     }
-
     input[type="text"] {
       width: 100%;
       padding: 10px 12px;
-      border-radius: 8px;
+      margin-top: 4px;
+      margin-bottom: 8px;
+      border-radius: 6px;
       border: 1px solid #ccc;
-      font-size: 14px;
-      outline: none;
+      font-size: 16px;
       box-sizing: border-box;
     }
-
-    input[type="text"]:focus {
-      border-color: #2563eb;
-      box-shadow: 0 0 0 1px #2563eb33;
+    .hint {
+      font-size: 13px;
+      color: #666;
+      margin-bottom: 12px;
     }
-
-    .helper {
-      font-size: 12px;
-      color: #777;
-      margin-top: 4px;
-    }
-
-    .dropdown {
+    .results {
       margin-top: 12px;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-      background: #fafafa;
-      max-height: 260px;
-      overflow-y: auto;
-      padding: 0;
-      list-style: none;
+      font-size: 15px;
     }
-
-    .dropdown.hidden {
-      display: none;
-    }
-
-    .dropdown li {
-      padding: 8px 10px;
+    .company {
+      padding: 6px 0;
       border-bottom: 1px solid #eee;
-      cursor: pointer;
-      font-size: 14px;
     }
-
-    .dropdown li:last-child {
-      border-bottom: none;
+    .empty {
+      color: #777;
+      margin-top: 8px;
     }
-
-    .dropdown li:hover {
-      background: #e5f0ff;
-    }
-
-    .status {
-      margin-top: 10px;
-      font-size: 12px;
-      color: #555;
-    }
-
-    .status.error {
-      color: #b91c1c;
-    }
-
-    .status.loading {
-      color: #2563eb;
+    .error {
+      color: #b00020;
+      margin-top: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>DeltaAIQ – Company Search</h1>
-    <p>Type a company name and see similar companies suggested using AI.</p>
+  <h1>DeltaAIQ – Company Search</h1>
+  <p>Type a company name and see similar companies suggested using AI.</p>
 
-    <label for="companyInput">Company name</label>
-    <input
-      type="text"
-      id="companyInput"
-      placeholder="Example: Lufthansa, Apple, TCS"
-      autocomplete="off"
-    />
-    <div class="helper">Suggestions will appear below as you type.</div>
+  <label for="company-input">Company name</label>
+  <input id="company-input" type="text" placeholder="e.g. Lufthansa, Apple, TCS" />
 
-    <ul id="companyDropdown" class="dropdown hidden"></ul>
+  <div class="hint">Suggestions will appear below as you type.</div>
 
-    <div id="status" class="status"></div>
-  </div>
+  <div id="status" class="results"></div>
 
   <script>
-    const input = document.getElementById("companyInput");
-    const dropdown = document.getElementById("companyDropdown");
-    const statusEl = document.getElementById("status");
-    let typingTimer = null;
+    const input = document.getElementById("company-input");
+    const statusDiv = document.getElementById("status");
 
-    function setStatus(message, type = "") {
-      statusEl.textContent = message || "";
-      statusEl.className = "status" + (type ? " " + type : "");
-    }
-
-    function showCompanies(companies) {
-      dropdown.innerHTML = "";
-      if (!companies || companies.length === 0) {
-        dropdown.classList.add("hidden");
-        return;
-      }
-
-      companies.forEach((name) => {
-        const li = document.createElement("li");
-        li.textContent = name;
-        li.addEventListener("click", () => {
-          input.value = name;
-          dropdown.classList.add("hidden");
-        });
-        dropdown.appendChild(li);
-      });
-
-      dropdown.classList.remove("hidden");
-    }
+    let timeoutId = null;
 
     async function fetchCompanies(query) {
-      if (!query || query.trim() === "") {
-        showCompanies([]);
-        setStatus("");
+      if (!query.trim()) {
+        statusDiv.innerHTML = "";
         return;
       }
 
-      setStatus("Looking for similar companies…", "loading");
+      statusDiv.innerHTML = "Loading suggestions…";
 
       try {
-        const response = await fetch(`/api/companySearch?query=${encodeURIComponent(query)}`);
-        if (!response.ok) {
-          throw new Error("API error: " + response.status);
+        const res = await fetch(`/api/companySearch?query=${encodeURIComponent(query)}`);
+        const data = await res.json();
+
+        if (data.error) {
+          statusDiv.innerHTML = `<div class="error">Error: ${data.error}</div>`;
+          return;
         }
 
-        const data = await response.json();
-        showCompanies(data.companies || []);
-        if ((data.companies || []).length === 0) {
-          setStatus("No companies found for this query.");
-        } else {
-          setStatus("");
+        const companies = data.companies || [];
+        if (companies.length === 0) {
+          statusDiv.innerHTML = `<div class="empty">No companies found for this query.</div>`;
+          return;
         }
+
+        statusDiv.innerHTML =
+          companies
+            .map((c) => `<div class="company">${c}</div>`)
+            .join("");
       } catch (err) {
         console.error(err);
-        setStatus("Something went wrong while fetching companies.", "error");
-        showCompanies([]);
+        statusDiv.innerHTML = `<div class="error">Something went wrong. Please try again.</div>`;
       }
     }
 
     input.addEventListener("input", () => {
-      if (typingTimer) clearTimeout(typingTimer);
-      typingTimer = setTimeout(() => {
-        fetchCompanies(input.value);
-      }, 400); // debounce
+      const value = input.value;
+
+      // simple debounce so we don't call API on every keystroke
+      if (timeoutId) clearTimeout(timeoutId);
+      timeoutId = setTimeout(() => fetchCompanies(value), 400);
     });
   </script>
 </body>
